// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Alert/Alert Error 1`] = `
.c0 {
  width: 100%;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 14px;
  text-align: left;
  background-color: #fff1f0;
  border: 1px solid #ffccc7;
  border-radius: 2px;
}

.c0 .message {
  padding-left: 8px;
}

<div
  className="c0"
  type="error"
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle"
    role="img"
    style={
      Object {
        "color": "#ff4d4f",
      }
    }
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    error message
  </span>
</div>
`;

exports[`FileProperties Alert/Alert Info 1`] = `
.c0 {
  width: 100%;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 14px;
  text-align: left;
  background-color: #e6f7ff;
  border: 1px solid #69c0ff;
  border-radius: 2px;
}

.c0 .message {
  padding-left: 8px;
}

<div
  className="c0"
  type="info"
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle"
    role="img"
    style={
      Object {
        "color": "#1890ff",
      }
    }
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    information message
  </span>
</div>
`;

exports[`FileProperties Alert/Alert Warning 1`] = `
.c0 {
  width: 100%;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 14px;
  text-align: left;
  background-color: #fffbe6;
  border: 1px solid #ffe58f;
  border-radius: 2px;
}

.c0 .message {
  padding-left: 8px;
}

<div
  className="c0"
  type="warning"
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle"
    role="img"
    style={
      Object {
        "color": "#faad14",
      }
    }
  >
    <svg
      aria-hidden="true"
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    warning message
  </span>
</div>
`;
